<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="title">Conjunction (AND)</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="a_b">A ^ B</string>
    <string name="T">T</string>
    <string name="F">F</string>
    <string name="submit_button">SUBMIT</string>
    <string name="correct_answers">You have %d correct answers!</string>
</resources>