<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/row3_column1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="100dp"
        android:text="@string/F"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/row3_column2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row2_column1" />

    <TextView
        android:id="@+id/row3_column2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="71dp"
        android:text="@string/T"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/input_row_2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row3_column1"
        app:layout_constraintTop_toBottomOf="@+id/row2_column2" />

    <TextView
        android:id="@+id/row4_colum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="100dp"
        android:text="@string/F"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/row4_column2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row3_column1" />

    <TextView
        android:id="@+id/row4_column2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="71dp"
        android:text="@string/F"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/input_row_4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row4_colum1"
        app:layout_constraintTop_toBottomOf="@+id/row3_column2" />

    <EditText
        android:id="@+id/input_row_4"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row4_column2"
        app:layout_constraintTop_toBottomOf="@+id/input_row_2" />

    <EditText
        android:id="@+id/input_row_3"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row2_column2"
        app:layout_constraintTop_toBottomOf="@+id/input_row_1" />

    <EditText
        android:id="@+id/input_row_1"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row_column2"
        app:layout_constraintTop_toBottomOf="@+id/example_a_b" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />

    <TextView
        android:id="@+id/example_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="100dp"
        android:text="@string/A"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/example_b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/example_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="84dp"
        android:text="@string/B"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/example_a_b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/example_a"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/example_a_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="92dp"
        android:text="@string/a_b"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/example_b"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/row_column1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="100dp"
        android:text="@string/T"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/row_column2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/example_a" />

    <TextView
        android:id="@+id/row2_column1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="100dp"
        android:text="@string/T"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/row2_column2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row_column1" />

    <TextView
        android:id="@+id/row2_column2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="71dp"
        android:text="@string/F"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/input_row_3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row2_column1"
        app:layout_constraintTop_toBottomOf="@+id/row_column2" />

    <TextView
        android:id="@+id/row_column2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="71dp"
        android:text="@string/T"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/input_row_1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row_column1"
        app:layout_constraintTop_toBottomOf="@+id/example_b" />

    <EditText
        android:id="@+id/input_row_2"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/row3_column2"
        app:layout_constraintTop_toBottomOf="@+id/input_row_3" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/submit_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/row4_column2" />

</androidx.constraintlayout.widget.ConstraintLayout>